--- a/index.html
+++ b/index.html
@@ -3,67 +3,181 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>White Trip Consulting - Planeje Sua Viagem</title>
+  <title>White Trip Consulting - Planeia a Tua Viagem</title>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    body, html {
       margin: 0;
       padding: 0;
-      background: #f5f7fa;
+      height: 100%;
+      font-family: 'Quicksand', sans-serif;
       color: #333;
+      background-color: #f8f8f8;
+    }
+    .video-background {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
+      filter: brightness(0.6);
     }
     header {
-      background: #0066cc;
+      background: rgba(255, 106, 0, 0.85);
       color: white;
       padding: 2rem;
       text-align: center;
+      animation: fadeInDown 1s ease-in-out;
+    }
+    header h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 3rem;
+      margin: 0 0 0.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
     }
     section {
       padding: 2rem;
       max-width: 800px;
-      margin: auto;
+      margin: 2rem auto;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      animation: fadeInUp 1s ease-in-out;
     }
     .cta {
       text-align: center;
       margin: 2rem 0;
     }
     .cta a {
-      background: #0066cc;
+      background: linear-gradient(45deg, #ff4081, #ff6a00);
       color: white;
-      padding: 1rem 2rem;
+      padding: 1rem 2.5rem;
       text-decoration: none;
       font-weight: bold;
+      font-size: 1.2rem;
+      border-radius: 12px;
+      display: inline-block;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: pulse 2s infinite;
+    }
+    .cta a:hover {
+      transform: scale(1.08);
+      box-shadow: 0 8px 20px rgba(255, 105, 135, 0.4);
+    }
+    .testimonials {
+      margin-top: 2rem;
+    }
+    .testimonial {
+      background: #fff7ec;
+      border-left: 5px solid #ff6a00;
+      padding: 1rem;
+      margin: 1rem 0;
       border-radius: 8px;
+      font-style: italic;
+    }
+    .carousel {
+      display: flex;
+      overflow-x: auto;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    .carousel img {
+      height: 200px;
+      border-radius: 12px;
+      flex-shrink: 0;
     }
     footer {
-      background: #eee;
+      background: rgba(255, 204, 112, 0.9);
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
     }
+    a {
+      color: #d1006f;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(255, 64, 129, 0.4); }
+      70% { box-shadow: 0 0 0 15px rgba(255, 64, 129, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(255, 64, 129, 0); }
+    }
   </style>
 </head>
 <body>
+  <video autoplay muted loop class="video-background">
+    <source src="https://cdn.coverr.co/videos/coverr-ocean-sunset-1564/1080p.mp4" type="video/mp4">
+    Seu navegador não suporta vídeo. Veja nossa página com imagens lindas!
+  </video>
+
   <header>
-    <h1>White Trip Consulting</h1>
-    <p>Planeje sua viagem com quem entende do assunto</p>
+    <h1 id="titulo">White Trip Consulting</h1>
+    <p id="subtitulo">Planeia a Tua viagem com quem entende do assunto</p>
   </header>
-  
+
   <section>
-    <h2>Solicite um Orçamento</h2>
-    <p>
-      Está pronto para sua próxima aventura? Preencha nosso formulário personalizado e receba um orçamento sob medida para a sua viagem.
+    <h2 id="secao-titulo">Solicite um Orçamento</h2>
+    <p id="descricao">
+      Estás pronto para a tua próxima aventura? Preenche o nosso formulário personalizado e recebe um orçamento sob medida para a Tua viagem.
     </p>
     <div class="cta">
-      <a href="https://www.icligo.com/forms/pt/contact-us/book-your-trip?utm_source=Z5DWwRZh" target="_blank">
+      <a id="botao" href="https://www.icligo.com/forms/pt/contact-us/book-your-trip?utm_source=Z5DWwRZh" target="_blank">
         Solicitar Orçamento
       </a>
     </div>
-    <p>Ou entre em contato pelo e-mail: <a href="mailto:whitetripconsulting@gmail.com">whitetripconsulting@gmail.com</a></p>
+    <p id="email">Ou entra em contato pelo e-mail: <a href="mailto:whitetripconsulting@gmail.com">whitetripconsulting@gmail.com</a></p>
+
+    <div class="testimonials">
+      <h3 id="depoimentos-titulo">O que nossos clientes dizem</h3>
+      <div class="testimonial">“A viagem dos meus sonhos! Atendimento excelente e tudo perfeito.” – Maria F.</div>
+      <div class="testimonial">“Roteiro personalizado que superou as expectativas. Recomendo demais! Vou voltar!” – João L.</div>
+      <div class="testimonial">“Nunca foi tão fácil viajar com tranquilidade.” – Carla M.</div>
+    </div>
+
+    <div class="carousel">
+      <img src="https://source.unsplash.com/400x300/?paris" alt="Paris">
+      <img src="https://source.unsplash.com/400x300/?bali" alt="Bali">
+      <img src="https://source.unsplash.com/400x300/?rome" alt="Roma">
+      <img src="https://source.unsplash.com/400x300/?maldives" alt="Maldivas">
+      <img src="https://source.unsplash.com/400x300/?tokyo" alt="Tóquio">
+    </div>
   </section>
 
   <footer>
     &copy; 2025 White Trip Consulting. Todos os direitos reservados.
   </footer>
+
+  <script>
+    const lang = navigator.language || navigator.userLanguage;
+    if (lang && !lang.startsWith('pt')) {
+      document.getElementById('titulo').innerText = 'White Trip Consulting';
+      document.getElementById('subtitulo').innerText = 'Plan your trip with travel experts';
+      document.getElementById('secao-titulo').innerText = 'Request a Quote';
+      document.getElementById('descricao').innerText = 'Ready for your next adventure? Fill out our custom form and receive a tailor-made quote for your trip.';
+      document.getElementById('botao').innerText = 'Request Quote';
+      document.getElementById('email').innerHTML = 'Or contact us via email: <a href="mailto:whitetripconsulting@gmail.com">whitetripconsulting@gmail.com</a>';
+      document.getElementById('depoimentos-titulo').innerText = 'What our clients say';
+      const testimonials = document.querySelectorAll('.testimonial');
+      if (testimonials.length >= 3) {
+        testimonials[0].innerText = 'Dream trip! Excellent service and everything was perfect. – Maria F.';
+        testimonials[1].innerText = 'Personalized itinerary that exceeded expectations. Highly recommend! – João L.';
+        testimonials[2].innerText = 'Never been so easy to travel with peace of mind. – Carla M.';
+      }
+    }
+  </script>
 </body>
 </html>
