--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>White Trip Consulting - Planeia a TUA Viagem</title>
+  <title>White Trip Consulting - Planeia a TUA Viagem!</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body, html {
@@ -122,13 +122,13 @@
 
   <header>
     <h1 id="titulo">White Trip Consulting</h1>
-    <p id="subtitulo">Planeia a TUA viagem com quem entende do assunto</p>
+    <p id="subtitulo">Planeia a TUA viagem com quem entende do assunto!</p>
   </header>
 
   <section>
     <h2 id="secao-titulo">Solicite um Orçamento</h2>
     <p id="descricao">
-      Estás pronto para a TUA próxima aventura? Preenche o nosso formulário personalizado e recebe um orçamento sob medida para a TUA viagem.
+      Estás pronto para a TUA próxima aventura? Preenche o nosso formulário personalizado e recebe um orçamento sob medida para a TUA viagem...
     </p>
     <div class="cta">
       <a id="botao" href="https://www.icligo.com/forms/pt/contact-us/book-your-trip?utm_source=Z5DWwRZh" target="_blank">
@@ -138,10 +138,11 @@
     <p id="email">Ou entra em contato pelo e-mail: <a href="mailto:whitetripconsulting@gmail.com">whitetripconsulting@gmail.com</a></p>
 
     <div class="testimonials">
-      <h3 id="depoimentos-titulo">O que nossos clientes dizem</h3>
+      <h3 id="depoimentos-titulo">O que nossos clientes dizem...</h3>
       <div class="testimonial">“A viagem dos meus sonhos! Atendimento excelente e tudo perfeito.” – Maria F.</div>
       <div class="testimonial">“Roteiro personalizado que superou as expectativas. Recomendo demais! Vou voltar!” – João L.</div>
-      <div class="testimonial">“Nunca foi tão fácil viajar com tranquilidade.” – Carla M.</div>
+      <div class="testimonial">“Nunca foi tão fácil viajar com tranquilidade..” – Carla M.</div>
+      <div class="testimonial">“Ter tudo tratado de A a Z , fica mais facil viajar” – Soraia T.</div>
     </div>
     
   <footer>
