--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>White Trip Consulting - Planeia a TUA Viagem!</title>
+  <title>White Trip Consulting - Planeia a TUA Viagem! </title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body, html {
@@ -122,14 +122,13 @@
 
   <header>
     <h1 id="titulo">White Trip Consulting</h1>
-    <p id="subtitulo">Planeia a TUA viagem com quem entende do assunto!</p>
+    <p id="subtitulo">Planeia a TUA viagem com quem entende do assunto! </p>
   </header>
 
   <section>
-    <h2 id="secao-titulo">Solicite um Orçamento</h2>
+    <h2 id="secao-titulo">Solicitar um Orçamento</h2>
     <p id="descricao">
-      Estás pronto para a TUA próxima aventura? Preenche o nosso formulário personalizado e recebe um orçamento sob medida para a TUA viagem...
-    </p>
+      Estás pronto para a TUA próxima aventura? Preenche o nosso formulário personalizado e recebe um orçamento sob medida para a TUA viagem...  </p>
     <div class="cta">
       <a id="botao" href="https://www.icligo.com/forms/pt/contact-us/book-your-trip?utm_source=Z5DWwRZh" target="_blank">
         Solicitar Orçamento
